Sat Mar 17 21:54:33 CET 2012  John Tytgat  <John.Tytgat@aaug.net>

	* regression/tests_pass/instr_pkhbt_pkhtb.s: Add.
	* regression/tests_pass/instr_sxt_uxt.s: Mark IT cases.
	* regression/tests_pass/instr_bfc_bfi_sbfx_ubfx.s: Likewise.
	* decode.c (oDecodeTable): Add PKH.
	* value.c (Value_ResolveSymbol): Fix comment.
	* m_cpu.c, m_cpu.h (m_pkh): Add.

Sat Mar 17 19:00:51 CET 2012  John Tytgat  <John.Tytgat@aaug.net>

	* regression/tests_pass/ldm_stm_pop_push.s: Renamed to...
	* regression/tests_pass/instr_ldm_stm_pop_push.s: ...this.
	* regression/tests_pass/operator_addition_logical.s: Removed ^
	extension.  We no longer want to support this.
	* regression/tests_pass/directive_rlist.s: Add.
	* directive_symbol.c, directive_symbol.h (c_rout): Add.
	* decode.c (oDecodeTable): Add RLIST.
	* m_cpumem.c (dstreglist): Factor out register list parser to...
	* get.c (Get_CPURList): ...here.
	* get.h (Get_CPURList): Add.
	* lex.c (lexGetBinop): Remove ^ support.
	* value.c (Value_ResolveSymbol): Reserve integer type.
	(valueTagAsString, valuePrint): Support eIntType_CPURList. 
	* value.h (eIntType_CPURList): Add.

Sat Mar 17 16:38:42 CET 2012  John Tytgat  <John.Tytgat@aaug.net>

	* input.c (inputSkipLook): Remove.
	* input.h (inputSkipLook): Likewise.
	* lex.c (lexGetBinop): Follow inputSkipLook removal.

Sat Mar 17 16:28:53 CET 2012  John Tytgat  <John.Tytgat@aaug.net>

	* regression/tests_pass/dcb_dcw_dcd.s: Renamed to...
	* regression/tests_pass/directive_data_integer.s: ...this. Add DCQ/DCQU
	tests.
	* regression/tests_pass/dcfs_dcfd.s: Renamed to...
	* tests_pass/directive_data_fp.s: ..this.
	* code.c (codeEvalLow): Implement implicit conversion from 1 char string
	to integer when string result is not wanted.
	* decode.c (oDecodeTable): Add DCQ entry.
	* directive_data.c (DefineInt): Add size 8 case.
	(c_dcq): Add.
	* directive_data.h (c_dcq): Add.
	* value.c (Value_Assign, valueFree, Value_ResolveSymbol, valueEqual,