@@ -1,3 +1,13 @@
+Mon Mar 19 23:24:24 CET 2012  John Tytgat  <John.Tytgat@aaug.net>
+
+	* regression/tests_pass/operator_index.s: Add tests based on labels.
+	* symbols.s (c_import): Implement a more liberal syntax for import
+	attributes.
+	* m_cpu.c (onlyregs): Add test on architecture.
+	(l_onlyregs): Likewise.
+	* eval.c (evalUnop): Add support for area symbols for :BASE: and
+	:INDEX:.
+
 Sat Mar 17 21:54:33 CET 2012  John Tytgat  <John.Tytgat@aaug.net>
 
 	* regression/tests_pass/instr_pkhbt_pkhtb.s: Add.
